2003-07-29  Werner Koch  <wk@gnupg.org>

	* global.c (gcry_control): Add GCRYCTL_SET_RANDOM_SEED_FILE and
	GCRYCTL_UPDATE_RANDOM_SEED_FILE.
	* gcrypt.h: Ditto.  Renamed index to idx, so avoid warning
	related to the old index function.

2003-07-28  Moritz Schulte  <moritz@g10code.com>

	* global.c (gcry_err_code_from_errno, gcry_err_code_to_errno)
	(gcry_err_make_from_errno, gcry_error_from_errno): New functions.

	* gcrypt.h: Declared: gcry_err_code_from_errno,
	gcry_err_code_to_errno, gcry_err_make_from_errno,
	gcry_error_from_errno.

	* Makefile.am (include_HEADERS): Added: gcrypt-module.h.

	* gcrypt.h: Include <gcrypt-module.h>.

	* gcrypt-module.h: New file.

2003-07-27  Werner Koch  <wk@gnupg.org>

	* gcrypt.h (gcry_mpi_scan, gcry_mpi_print): API change.
	(gcry_mpi_dump): New.

2003-07-21  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h: Declared: gcry_ac_key_data_get.
	(gcry_pk_spec): Renamed member `sexp_names' into `aliases'.

2003-07-20  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (gcry_md_oid_spec_t): New type.
	(gcry_md_spec): New member: oids.

2003-07-19  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (gcry_cipher_oid_spec_t): New type.
	(gcry_cipher_spec): New member: oids;

2003-07-18  Werner Koch  <wk@gnupg.org>

	* gcrypt.h (gcry_mpi_set_opaque): Add a warning comment.

2003-07-15  Moritz Schulte  <moritz@g10code.com>

	* secmem.c (compress_pool): Remove function, since unused blocks
	are automatically concatenad.

	* gcrypt.h: Bumped version number up to 1.1.42-cvs.

2003-07-14  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (gcry_cipher_spec): New member: aliases.

	* Makefile.am (noinst_PROGRAMS, testapi_SOURCES, testapai_LDADD,
	benchmark_SOURCES, benchmark_LDADD): Removed.

	* benchmark.c, testapi.c: Removed files.

	* mpi.h: Removed disabled typedef.
	* g10lib.h: Likewise.

	* benchmark.c, g10lib.h, gcrypt.h, global.c, module.c, sexp.c:
	Used gcry_err* wrappers for libgpg-error symbols.
